# codex-obsidian-book-library

./: .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  install-from-github.command  install-macos.command  package-lock.json  package.json  pyproject.toml
.codex/: config.toml
book_agent/: catalog.py  chunking.py  config.py  embeddings.py  importer.py  indexing.py  markdown.py  mcp_server.py  models.py  notes.py  ocr_worker.py  rendering.py  retrieval.py  storage.py  tools.py  vault.py
book_agent/ocr/: __init__.py  light.py  models.py  quality.py  rapid.py  rendering.py  report.py  router.py  service.py  tesseract.py  vision.py  worker.py
book_agent/parsers/: __init__.py  base.py  epub.py  pdf.py  registry.py  text.py
distribution/: model-manifest.json  release.json
docs/: USER_GUIDE.md  使用说明.md  安装说明.md  常见问题.md  隐私与数据存放.md
installer/: __init__.py  install_macos.py  model_assets.py  node_runtime.py  runtime_selftest.py
outputs/: 书库RAG快速开始.md
scripts/: __init__.py  build_macos_release.py  build_vision_helper.py  create_word_guides.py  light_ocr_worker.mjs
tests/: fakes.py  test_build_macos_release.py  test_build_vision_helper.py  test_catalog.py  test_chunking.py  test_codex_install_contract.py  test_config.py  test_embeddings.py  test_end_to_end.py  test_evidence.py  test_importer.py  test_indexing.py  test_mcp_server.py  test_notes.py  test_ocr_mcp_tools.py  test_project_policy.py  test_release_docs.py  test_rendering.py  test_retrieval.py  test_storage.py  test_tools.py  test_user_guide.py  test_vault.py
vault/: 首页.md
(+50 files in other folders)
